# messenger_cpp

./: .gitignore  CMakeLists.txt  Chat.cpp  DataBase.cpp  DataBase.h  Message.cpp  Message.h  README.md  Shuffle_functions.h  Singleton.h  User.cpp  User.h  main.cpp  main_shuffle.cpp  maincpp.cpp  messenger.sln  messenger.vcxproj  messenger.vcxproj.filters  Сhat.h
src/: Chat.cpp  Chat.h  ConsoleManager.cpp  ConsoleManager.h  DataBase.cpp  DataBase.h  Message.cpp  Message.h  Singleton.h  User.cpp  User.h  main.cpp
